--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-.menu-img {
-    display: none;
+.menu-img img{
+display: none;
+}
+.heading{
+    display: flex;
+}
+.heading>div a{
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.3em;
+    color: var(--app-primary-color);
+    text-decoration: none;
+    display: inline-block;
+    pointer-events: auto;
+
+} 
+header{
+    margin-top: 25px;
 }
 
 header>div {
@@ -18,7 +34,8 @@ header>div {
 }
 
 .cart-icon {
-    width: 4%;
+    width: 3%;
+    margin-top: -7px;
 }
 
 .cart-icon img {
@@ -72,9 +89,38 @@ nav>div {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 27px
 }
 h2{
     color: #202020;
     font-weight: lighter;
     font-size: 122%;
+}
+.tshirt-images{
+    display: flex;
+    flex-direction: row;
+}
+.tshirt-images >div img{
+    opacity: 1;
+    transition: opacity 0.5s ease 0s;
+
+}
+.bottom-buttons{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 45px;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+footer div{
+    background: #202020;
+color: aliceblue;
+margin-top: 10px;
+padding: 0px 18px;
+}
+footer a{
+    color: #0000008f;
 }
