3 page complete 4th is incomplete

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ display: none;
 }
 .heading{
     display: flex;
+    height: 38px;
 }
 .heading>div a{
     font-size: 16px;
@@ -151,4 +152,89 @@ footer a{
     font-weight: 100;
     font-size: 85%;
     color: #000000bd;
+}
+/*end of mens_outerwear*/
+
+/* product*/
+.product-section {
+display: flex;
+justify-content: center;
+}
+.product-section select{
+width: 100%;
+height: 50px;
+background-color: white;
+border-left: none;
+border-right: none;
+padding: 0px 70px;
+font-size: 18px;
+outline: none;
+}
+.product-img img{
+    width: 100%;
+}
+.product-footer{
+    margin-top: 30%;
+}
+.no-of-items{
+    border-top: none;
+}
+.product-section div{
+    width: 50%;
+}
+.add-to-cart-button {
+    border: 2px solid black;
+    padding: 6.5px 37px;
+}
+.product-section{
+    margin-top: 54px;
+}
+.product-section .drop-down{
+    width: 90%;
+}
+.product-section>div> h1{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    margin: 0;
+}
+.product-section p{
+    color: #000000b3;
+}
+.drop-down button{
+    border: 2px solid #000;
+    background-color: #FFF;
+    font-size: 14px;
+   
+    padding: 8px 44px;
+       text-decoration: none;
+}
+.product-section label{
+    position: absolute;
+    margin-top: 13px;
+    color: #000000c4;
+}
+
+/*end of product*/
+.cart-items-heading h1,p{
+   text-align: center;
+}
+.cart-items{
+    display: flex;
+    padding: 0 24px 48px 24px;
+}
+.cart-items>div img{
+    width: 100%;
+}
+.cross-icon{
+    width: 18px;
+    float: left;
+}
+.cart-items>.tshirt-image{
+    height: 72px;
+    width: 72px;
+}
+.item-name{
+    margin-left: 17px;
+    padding-top: 27px;
 }
