4th page complete

--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-.menu-img img{
-display: none;
+body {
+    font-family: 'Roboto', 'Noto', sans-serif;
+    font-size: 13px;
+    line-height: 1.5;
 }
-.heading{
+
+.menu-img img {
+    display: none;
+}
+
+.heading {
     display: flex;
     height: 38px;
 }
-.heading>div a{
+
+.heading>div a {
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 0.3em;
@@ -13,9 +21,9 @@ display: none;
     text-decoration: none;
     display: inline-block;
     pointer-events: auto;
+}
 
-} 
-header{
+header {
     margin-top: 25px;
 }
 
@@ -83,176 +91,241 @@ nav>div {
     margin-bottom: 10px;
     color: #202020;
     /* margin: 0 38%; */
-    
 }
-.mens-outerwear, .ladies-outerwear{
+
+.mens-outerwear,
+.ladies-outerwear {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin-bottom: 27px
 }
-h2{
+
+h2 {
     color: #202020;
     font-weight: lighter;
     font-size: 122%;
 }
-.tshirt-images{
+
+.tshirt-images {
     display: flex;
     flex-direction: row;
 }
-.tshirt-images >div img{
+
+.tshirt-images>div img {
     opacity: 1;
     transition: opacity 0.5s ease 0s;
-
 }
-.bottom-buttons{
+
+.bottom-buttons {
     display: flex;
     justify-content: space-around;
     margin-bottom: 45px;
 }
-footer{
+
+footer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-footer div{
+
+footer div {
     background: #202020;
-color: aliceblue;
-margin-top: 10px;
-padding: 0px 18px;
+    color: aliceblue;
+    margin-top: 10px;
+    padding: 0px 18px;
 }
-footer a{
+
+footer a {
     color: #0000008f;
 }
+
 /*mens_outerwear */
-.text{
+.text {
     margin-top: 0;
     font-size: 85%;
     color: #080808b5;
 }
-.mens-outerwear>div h2{
+
+.mens-outerwear>div h2 {
     margin-bottom: 0;
 }
-.select-items{
+
+.select-items {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap:2em;
+    grid-gap: 2em;
     padding: 0px 20px;
 }
-.select-tshirt>div img{
+
+.select-tshirt>div img {
     width: 100%;
 }
-.select-tshirt>div p{
+
+.select-tshirt>div p {
     text-align: center;
     font-weight: 600;
 }
-.select-tshirt>div>.price{
+
+.select-tshirt>div>.price {
     text-align: center;
     font-weight: 100;
     font-size: 85%;
     color: #000000bd;
 }
-/*end of mens_outerwear*/
 
+/*end of mens_outerwear*/
 /* product*/
 .product-section {
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-.product-section select{
-width: 100%;
-height: 50px;
-background-color: white;
-border-left: none;
-border-right: none;
-padding: 0px 70px;
-font-size: 18px;
-outline: none;
+
+.product-section select {
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border-left: none;
+    border-right: none;
+    padding: 0px 70px;
+    font-size: 18px;
+    outline: none;
 }
-.product-img img{
+
+.product-img img {
     width: 100%;
 }
-.product-footer{
+
+.product-footer {
     margin-top: 30%;
 }
-.no-of-items{
+
+.no-of-items {
     border-top: none;
 }
-.product-section div{
+
+.product-section div {
     width: 50%;
 }
+
 .add-to-cart-button {
     border: 2px solid black;
     padding: 6.5px 37px;
 }
-.product-section{
+
+.product-section {
     margin-top: 54px;
 }
-.product-section .drop-down{
+
+.product-section .drop-down {
     width: 90%;
 }
-.product-section>div> h1{
+
+.product-section>div>h1 {
     font-size: 24px;
     font-weight: 500;
     line-height: 28px;
     margin: 0;
 }
-.product-section p{
+
+.product-section p {
     color: #000000b3;
 }
-.drop-down button{
+
+.drop-down button {
     border: 2px solid #000;
     background-color: #FFF;
     font-size: 14px;
-   
     padding: 8px 44px;
-       text-decoration: none;
+    text-decoration: none;
 }
-.product-section label{
+
+.product-section label {
     position: absolute;
     margin-top: 13px;
     color: #000000c4;
 }
 
 /*end of product*/
-.cart-items-heading h1,p{
-   text-align: center;
+/* cart */
+.cart-items-heading h1,p {
+    text-align: center;
 }
-.cart-items{
+.cart-items-heading p{
+ 
+    color: #0c0c0ca3;
+}
+.cart-items-heading h1{
+
+    margin: 0 0 4px 0;
+    font-size: 1.3em;
+    font-weight: 500;
+}
+.cart-items {
     display: flex;
-    padding: 0 24px 48px 24px;
-    justify-content: space-between;
+    margin: 0 5%;
 }
-.cart-items>div img{
+
+.cart-items>div img {
     width: 100%;
 }
-.cross-icon{
+
+.cross-icon {
     width: 18px;
     padding-top: 24px;
-  
 }
-.cart-items>.tshirt-image{
+
+.cart-items>.tshirt-image {
     height: 72px;
     width: 72px;
 }
-.item-name{
+
+.item-name {
     margin-left: 17px;
     padding-top: 27px;
 }
-.cart-items>div select{
+
+.cart-items>div select {
     border: none;
     background: 0;
     color: #000000ab;
     outline: none;
 }
-.cart-items .quantity{
-    padding-top: 24px;
-}
-.size{
-    padding-top: 9px;
-}
-.amount{
+
+.cart-items .quantity {
     padding-top: 24px;
 }
 
+.size {
+    padding-top: 9px;
+}
+
+.amount {
+    padding-top: 24px;
+}
+
+.detailed-info {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-left: 24px;
+    color: #0808089c;
+}
+.checkout-box >div button{
+    background: white;
+    border: 2px solid;
+    padding: 8px 44px;
+}
+.checkout-box>div{
+    float: right;
+    display:flex;
+    justify-content: space-around;
+    width:50%;
+}
+.cart-footer{
+    margin-top: 226px;
+}
+.cart-items-heading{
+    margin-top: 64px;
+}
