--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ a {
 nav {
     display: flex;
     justify-content: center;
+    margin-top: 19px;
+    margin-bottom: 9px;
 }
 
 nav>div {
@@ -180,6 +182,10 @@ footer a {
 .product-section {
     display: flex;
     justify-content: center;
+    margin: 0 auto;
+    padding: 0 24px 48px 24px;
+    max-width: 900px;
+    overflow: hidden;
 }
 
 .product-section select {
@@ -383,6 +389,7 @@ margin-left: 80px;
 .card-details{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 4px;
 }
 .details input :not(#checkbox){
     height: 47px;
@@ -446,4 +453,7 @@ height: 47px;
 }
 .country{
     width: 100%;
+}
+.form-section{
+    margin-top: 45px;
 }
