--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@ body {
     font-family: 'Roboto', 'Noto', sans-serif;
     font-size: 13px;
     line-height: 1.5;
+    margin: 0;
 }
 
 .menu-img img {
     display: none;
+}
+
+.empty {
+    height: 30;
+    width: 30;
 }
 
 .heading {
@@ -33,14 +39,10 @@ header>div {
     align-content: center;
 }
 
-.menu-img img {
-    width: 30px;
-}
-
 .empty {
-    width: 10px;
-    height: 10px;
-    display: none;
+    width: 30px;
+    height: 0px;
+    /* display: none; */
 }
 
 .cart-icon {
@@ -104,11 +106,13 @@ nav>div {
     align-items: center;
     margin-bottom: 27px
 }
-.mens-outerwear h2, .ladies-outerwear h2, .tshirts h2{
-margin: 24px 0;
-text-align: center;
-}
 
+.mens-outerwear h2,
+.ladies-outerwear h2,
+.tshirts h2 {
+    margin: 24px 0;
+    text-align: center;
+}
 
 h2 {
     color: #202020;
@@ -150,13 +154,12 @@ footer a {
 }
 
 /*mens_outerwear */
+
 .text {
     margin-top: 0;
     font-size: 85%;
     color: #080808b5;
 }
-
-
 
 .select-items {
     display: grid;
@@ -182,7 +185,9 @@ footer a {
 }
 
 /*end of mens_outerwear*/
+
 /* product*/
+
 .product-section {
     display: flex;
     justify-content: center;
@@ -191,10 +196,14 @@ footer a {
     max-width: 1180px;
     overflow: hidden;
 }
-.product-section-div{
+
+.product-section-div {
     margin: 22px 0;
+    max-width: 476px;
+    padding-left: 23px;
 }
-.left-allign-text{
+
+.left-allign-text {
     text-align: left;
 }
 
@@ -264,21 +273,25 @@ footer a {
 }
 
 /*end of product*/
+
 /* cart */
-.cart-items-heading h1,p {
+
+.cart-items-heading h1,
+p {
     text-align: center;
 }
-.cart-items-heading p{
- 
+
+.cart-items-heading p {
     color: #0c0c0ca3;
     margin-top: 8px;
 }
-.cart-items-heading h1{
 
+.cart-items-heading h1 {
     margin: 0 0 4px 0;
     font-size: 1.3em;
     font-weight: 500;
 }
+
 .cart-items {
     display: flex;
     margin: 0 5%;
@@ -329,44 +342,51 @@ footer a {
     margin-left: 24px;
     color: #0808089c;
 }
-.checkout-box >div button{
+
+.checkout-box>div button {
     background: white;
     border: 2px solid;
     padding: 8px 44px;
 }
-.checkout-box>div{
+
+.checkout-box>div {
     float: right;
-    display:flex;
+    display: flex;
     justify-content: flex-end;
     width: 50%;
     margin-right: 60px;
 }
 
-.cart-footer{
+.cart-footer {
     margin-top: 226px;
 }
-.cart-items-heading{
+
+.cart-items-heading {
     margin-top: 64px;
 }
-.checkout-box>div span{
+
+.checkout-box>div span {
     margin: 0 64px 0 24px;
 }
+
 /* end of cart */
+
 /* checkout*/
-.details{
-    display: flex;
-flex-direction: column;
-width: 100%;
 
-}
-.payment-details{
+.details {
     display: flex;
-flex-direction: column;
-width: 100%;
-margin-left: 80px;
+    flex-direction: column;
+    width: 100%;
 }
 
-.form-section{
+.payment-details {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 80px;
+}
+
+.form-section {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -375,7 +395,8 @@ margin-left: 80px;
     max-width: 900px;
     overflow: hidden;
 }
-.form-section input{
+
+.form-section input {
     display: block;
     width: 100%;
     border: none;
@@ -383,102 +404,234 @@ margin-left: 80px;
     padding: 8px 0;
     outline: none;
 }
-.form-section select{
+
+.form-section select {
     outline: none;
     border: none;
-    border-bottom: 1px solid #ccc;;
+    border-bottom: 1px solid #ccc;
+    ;
     background: white;
 }
 
-.card-details div{
+.card-details div {
     display: inline;
 }
-.order-item-list>.item-name{
-    margin-left:0; 
+
+.order-item-list>.item-name {
+    margin-left: 0;
 }
-.card-details{
+
+.card-details {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 4px;
 }
-.details input :not(#checkbox){
-    height: 47px;
 
+.details input :not(#checkbox) {
+    height: 47px;
 }
-.same-address-checkbox input{
+
+.same-address-checkbox input {
     width: 4%;
- }
-.expiry{
+}
+
+.expiry {
     padding: 8px 63px 8px 0;
     border-bottom: 1px solid #ccc;
-} 
-.payment-details> input,select{
+}
+
+.payment-details>input,
+select {
     height: 47px;
     border-bottom: 1px solid #ccc;
 }
-.cvv{
+
+.cvv {
     margin-top: 15px;
 }
 
-.details input:not(#checkbox){
-height: 47px;
+.details input:not(#checkbox) {
+    height: 47px;
 }
-.different-address{
+
+.different-address {
     /* margin-left: 24px; */
 }
-#checkbox{
+
+#checkbox {
     width: 20px;
 }
-.checkbox-flex{
+
+.checkbox-flex {
     display: flex;
 }
-#button{
+
+#button {
     background: white;
     border: 2px solid;
 }
-.btn{
+
+.btn {
     width: 192px;
     height: 36px;
 }
-.page-heading{
+
+.page-heading {
     margin-top: 64px;
 }
-.page-heading b{
+
+.page-heading b {
     font-size: 1.3em;
     font-weight: 500;
 }
-.form-section h2{
+
+.form-section h2 {
     font-size: 100%;
     font-weight: 600;
 }
-.form-section input:focus{
-   
+
+.form-section input:focus {
     border-bottom: 2px solid black;
 }
-#demo-text{
-    color:#0c0c0ca1;
+
+#demo-text {
+    color: #0c0c0ca1;
 }
-.order-total-price{
+
+.order-total-price {
     margin: 28px 0;
 }
-.country{
+
+.country {
     width: 100%;
 }
-.form-section{
+
+.form-section {
     margin-top: 45px;
 }
-.mens-outerwear-im img{
+
+.mens-outerwear-im img {
     width: 100%;
 }
-@media (max-width: 770px){
-    nav{
+
+.btn-for-product-midscreen {
+    display: none;
+}
+
+.main-page-section-cart {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.cart-items .quantity {
+    padding-top: 12px;
+}
+.checkout-box-mid-screen{
+    display: none;
+}
+
+@media (max-width: 770px) {
+    nav {
         display: none;
     }
     .menu-img img {
         display: block;
-        
     }
-    .mens-outerwear-im img{
+    .mens-outerwear-im img {
         display: none;
+    }
+    .select-items {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2em;
+        padding: 0px 20px;
+    }
+    .product-section {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        padding: 0 24px 48px 24px;
+        max-width: 1180px;
+        overflow: hidden;
+        flex-direction: column;
+        align-items: center;
+    }
+    .product-section div {
+        width: 100%;
+    }
+    /* .product-section-div h1,p{
+        margin: 22px 0;
+        max-width: 100%;
+        padding-left: 23px; */
+    .product-section div {
+        width: 85%;
+        padding: 0px 0 0 50px;
+        margin: 22px 0;
+        max-width: 100%;
+        padding-left: 23px;
+    }
+    .allin-text {
+        margin-left: 28px;
+    }
+    .product-section>div>h1 {
+        margin: 0 0 0 23px;
+    }
+    .product-footer {
+        display: none;
+    }
+    .drop-down button {
+        display: none;
+    }
+    .btn-for-product-midscreen {
+        display: block;
+        height: 64px;
+    }
+    .btn-for-product-midscreen button {
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        background-color: #222296;
+    }
+    .btn-for-product-midscreen a {
+        color: white;
+    }
+    .cart-footer {
+        display: none;
+    }
+    .checkout-box button {
+        display: none;
+    }
+    .cart-items-heading {
+        margin-top: 0;
+    }
+    .menu-img img {
+        width: 30px;
+    }
+    .empty {
+        display: none;
+    }
+    .checkout-box-mid-screen{
+        width: 100%;
+        height :64px;
+        display: block;
+        margin-top: 325px;
+        position: absolute;
+        bottom: 0;
+    }
+    .checkout-box-mid-screen button{
+        width: 100%;
+        height: 100%;
+        background-color: #232373;
+    }
+    .checkout-box-mid-screen button a{
+    color: #ffff;
+    }
+    .btn-for-product-midscreen{
+       
+        width: 100%;
+        bottom: 0;
+    }
+    product-footer {
+        margin-top:0%;
     }
 }
