object fit done

--- a/style.css
+++ b/style.css
@@ -64,7 +64,13 @@ header>div {
 
 .tshirts img {
     width: 100%;
+   
 }
+.two-image-fit-cover{
+    width:100%;
+    height:240px
+}
+
 
 a {
     text-decoration: none;
@@ -529,6 +535,9 @@ select {
 .checkout-box-mid-screen{
     display: none;
 }
+.mid-screen-place-order{
+    display: none;
+}
 
 @media (max-width: 770px) {
     nav {
@@ -634,4 +643,36 @@ select {
     product-footer {
         margin-top:0%;
     }
+    .page-heading {
+         margin-top: 0;
+    }
+    .checkout-page-footer{
+        display: none;
+    }
+    .form-section {
+        flex-direction: column;
+    }
+    .payment-details{
+        margin-left: 0;
+    }
+    .btn{
+        display: none;
+    }
+    .mid-screen-place-order{
+        width: 100%;
+        display: block;
+        height: 64px;
+        position: fixed;
+        bottom: 0;
+    }
+    .mid-screen-place-order button{
+        display: block;
+        width:100%;
+        height: 64px;
+        background-color: #1f1f7b;
+        
+        
+    }
+    
+
 }
