--- a/style.css
+++ b/style.css
@@ -42,11 +42,10 @@ header>div {
 .empty {
     width: 30px;
     height: 0px;
- }
+}
 
 .cart-icon {
     width: 3%;
- 
 }
 
 .two-image-fit-cover img {
@@ -74,9 +73,7 @@ header>div {
     width: 100%;
 }
 
-.tshirts img {
- 
-}
+.tshirts img {}
 
 .two-image-fit-cover {
     width: 100%;
@@ -112,7 +109,7 @@ nav>div {
     justify-content: center;
     margin-bottom: 10px;
     color: #202020;
- }
+}
 
 .mens-outerwear,
 .ladies-outerwear {
@@ -469,7 +466,6 @@ select {
 .details input:not(#checkbox) {
     height: 47px;
 }
-
 
 #checkbox {
     width: 20px;
