--- a/style.css
+++ b/style.css
@@ -47,11 +47,21 @@ header>div {
 .cart-icon {
     width: 3%;
 }
+.two-image-fit-cover-mens-outerwear{
+    width: 100%;
+    height: 240px;
+
+}
+.two-image-fit-cover-mens-outerwear img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .two-image-fit-cover img {
     width: 100%;
     height: 100%;
-    object-fit: cover
+    object-fit: cover;
 }
 
 .two-image-fit-cover-two-image img {
@@ -77,7 +87,7 @@ header>div {
 
 .two-image-fit-cover {
     width: 100%;
-    height: 240px
+    height: 240px;
 }
 
 a {
@@ -624,8 +634,7 @@ select {
         width: 100%;
         height: 64px;
         display: block;
-        margin-top: 325px;
-        position: absolute;
+        position: fixed;
         bottom: 0;
     }
     .checkout-box-mid-screen button {
@@ -673,5 +682,14 @@ select {
     }
     .checkout-box>div span {
         margin: 0 -22px 0 24px;
+    }
+    .two-image-fit-cover-mens-outerwear{
+     display: none;
+    }
+    .btn-for-product-midscreen{
+        position: fixed;
+    }
+    .mid-screen-place-order>button a{
+        color: white;
     }
 }
