--- a/css/checkout.css
+++ b/css/checkout.css
@@ -162,3 +162,40 @@ select {
 .shipping-address>label{
     padding-left:4px; 
 }
+.country{
+    padding-bottom: 10px;
+}
+
+@media (max-width: 770px){
+    .page-heading {
+        margin-top: 0;
+    }
+    .form-section {
+        flex-direction: column;
+    }
+    .payment-details {
+        margin-left: 0;
+    }
+    .checkout-page-footer {
+        display: none;
+    }
+    .btn {
+        display: none;
+    }
+    .mid-screen-place-order button {
+        display: block;
+        width: 100%;
+        height: 64px;
+        background-color: #1f1f7b;
+    }
+    .mid-screen-place-order>button a {
+        color: white;
+    }
+    .mid-screen-place-order {
+        width: 100%;
+        display: block;
+        height: 64px;
+        position: fixed;
+        bottom: 0;
+    }
+}
