--- a/css/mens_outerwear.css
+++ b/css/mens_outerwear.css
@@ -1,5 +1,4 @@
-
-.text {
+.no-of-items{
     margin-top: 0;
     font-size: 85%;
     color: #080808b5;
@@ -37,8 +36,18 @@
     font-weight: lighter;
     font-size: 122%;
 }
+.image-cover-mens-outerwear {
+    width: 100%;
+    height: 240px;
+}
+
+.image-cover-mens-outerwear img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 @media (max-width: 770px){
-.two-image-fit-cover-mens-outerwear {
+.image-cover-mens-outerwear {
     display: none;
 }
 .select-items {
