--- a/css/mens_outerwear.css
+++ b/css/mens_outerwear.css
@@ -1,4 +1,4 @@
-.no-of-items{
+.no-of-items {
     margin-top: 0;
     font-size: 85%;
     color: #080808b5;
@@ -26,9 +26,12 @@
     font-size: 85%;
     color: #000000bd;
 }
-.cart-items-heading h1, p {
+
+.cart-items-heading h1,
+p {
     text-align: center;
 }
+
 .mens-outerwear h2 {
     margin: 24px 0;
     text-align: center;
@@ -36,6 +39,7 @@
     font-weight: lighter;
     font-size: 122%;
 }
+
 .image-cover-mens-outerwear {
     width: 100%;
     height: 240px;
@@ -46,15 +50,16 @@
     height: 100%;
     object-fit: cover;
 }
-@media (max-width: 770px){
-.image-cover-mens-outerwear {
-    display: none;
-}
-.select-items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 2em;
-    padding: 0px 20px;
-}
 
+@media (max-width: 770px) {
+    .image-cover-mens-outerwear {
+        display: none;
+    }
+
+    .select-items {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2em;
+        padding: 0px 20px;
+    }
 }
