--- a/css/checkout.css
+++ b/css/checkout.css
@@ -132,10 +132,6 @@ select {
     margin-top: 45px;
 }
 
-.mens-outerwear-im img {
-    width: 100%;
-}
-
 .btn-for-product-midscreen {
     display: none;
 }
@@ -156,41 +152,52 @@ select {
 .mid-screen-place-order {
     display: none;
 }
-.cart-items-heading h1, p {
+
+.cart-items-heading h1,
+p {
     text-align: center;
 }
-.shipping-address>label{
-    padding-left:4px; 
+
+.shipping-address>label {
+    padding-left: 4px;
 }
-.country{
+
+.country {
     padding-bottom: 10px;
 }
 
-@media (max-width: 770px){
+@media (max-width: 770px) {
     .page-heading {
         margin-top: 0;
     }
+
     .form-section {
         flex-direction: column;
     }
+
     .payment-details {
         margin-left: 0;
     }
+
     .checkout-page-footer {
         display: none;
     }
+
     .btn {
         display: none;
     }
+
     .mid-screen-place-order button {
         display: block;
         width: 100%;
         height: 64px;
         background-color: #1f1f7b;
     }
+
     .mid-screen-place-order>button a {
         color: white;
     }
+
     .mid-screen-place-order {
         width: 100%;
         display: block;
