--- a/css/common.css
+++ b/css/common.css
@@ -2,8 +2,8 @@
     display: flex;
     height: 38px;
 }
+
 body {
-    font-family: 'Roboto', 'Noto', sans-serif;
     font-size: 13px;
     line-height: 1.5;
     margin: 0;
@@ -13,15 +13,10 @@ body {
     display: none;
 }
 
-
 .heading>div a {
     font-size: 16px;
-    font-weight: 600;
     letter-spacing: 0.3em;
-    color: var(--app-primary-color);
     text-decoration: none;
-    display: inline-block;
-    pointer-events: auto;
 }
 
 header {
@@ -34,20 +29,19 @@ header>div {
     align-content: center;
 }
 
-.empty {
+.cart-icon {
     width: 30px;
-    height: 0px;
+    height: 30px;
 }
 
-.cart-icon {
-    width: 3%;
-}
 .cart-icon img {
     width: 100%;
 }
-.heading-shop{
+
+.heading-shop {
     padding: 0 0 0 30px;
 }
+
 footer {
     display: flex;
     flex-direction: column;
@@ -64,6 +58,7 @@ footer div {
 footer a {
     color: #0000008f;
 }
+
 nav {
     display: flex;
     justify-content: center;
@@ -74,37 +69,41 @@ nav {
 nav>div {
     margin: 10px;
 }
+
 a {
     text-decoration: none;
     color: black;
 }
+
 body {
-    font-family: 'Roboto', 'Noto', sans-serif;
+    font-family: sans-serif;
     font-size: 13px;
     line-height: 1.5;
     margin: 0;
 }
+
 .two-image-fit-cover-mens-outerwear {
     width: 100%;
     height: 240px;
 }
+
 .two-image-fit-cover-mens-outerwear img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 @media (max-width: 770px) {
     .menu-img img {
         display: block;
         width: 30px;
-        
     }
+
     nav {
         display: none;
     }
-    .heading-shop{
+
+    .heading-shop {
         padding: 0px 0px 0px 0px;
     }
-    
-    
 }
